--- a/pureHTML.html
+++ b/pureHTML.html
@@ -12,7 +12,7 @@
     <img src ="pole.png">
 </div>
 <div class ="car">
-    <img src="car.png">
+    <img src="car3.png">
 </div>
 <div class = "wheel">
     <img src="wheel.png" class="back-wheel">
